--- a/app/design/adminhtml/default/default/template/system/config/js.phtml
+++ b/app/design/adminhtml/default/default/template/system/config/js.phtml
@@ -71,7 +71,7 @@ originModel.prototype = {
     initialize : function()
     {
         this.reload = false;
-        this.loader = new VarienLoader();
+        this.loader = new varienLoader();
         this.regionsUrl = "<?= $this->getUrl('*/json/countryRegion') ?>";
 
         this.bindCountryRegionRelation();
