--- a/app/design/adminhtml/default/default/template/giftmessage/popup.phtml
+++ b/app/design/adminhtml/default/default/template/giftmessage/popup.phtml
@@ -13,22 +13,8 @@
 ?>
 
 <?php if ($this->getChildHtml()) :?>
-<div id="gift_options_window_mask" class="popup-window-mask" style="display: none;"></div>
-<div id="gift_options_configure_new" class="gift_options-popup product-configure-popup" style="display: none;">
-    <div id="gift_options_form_contents">
-        <div class="entry-edit">
-            <div class="entry-edit-head">
-                <h4 class="icon-head fieldset-legend"><?= Mage::helper('giftmessage')->__('Gift Options for') ?> <span id="gift_options_configure_title"></span></h4>
-            </div>
-            <div class="content">
-                <?= $this->getChildHtml() ?>
-            </div>
-            <div class="buttons-set a-right">
-                <button type="button" class="scalable" id="gift_options_cancel_button"><span><?= Mage::helper('giftmessage')->__('Cancel') ?></span></button>
-                <button type="button" class="scalable" id="gift_options_ok_button"><span><?= Mage::helper('giftmessage')->__('OK') ?></span></button>
-            </div>
-        </div>
-    </div>
+<div id="gift_options_form_contents" style="display: none;">
+    <?= $this->getChildHtml() ?>
 </div>
 
 <script type="text/javascript">
