Revert "Removed unused `adminhtml/events.js` (#309)"
This reverts commit b997ff5803766ee7eeae03da8e819fde1e49127f.

--- a/app/design/adminhtml/default/default/layout/oauth.xml
+++ b/app/design/adminhtml/default/default/layout/oauth.xml
@@ -64,6 +64,7 @@
         <reference name="head">
             <action method="removeItem"><type>js</type><name>maho-dialog.js</name></action>
             <action method="removeItem"><type>js</type><name>varien/js.js</name></action>
+            <action method="removeItem"><type>js</type><name>mage/adminhtml/events.js</name></action>
             <action method="removeItem"><type>js</type><name>mage/adminhtml/loader.js</name></action>
             <action method="removeItem"><type>js</type><name>mage/adminhtml/grid.js</name></action>
             <action method="removeItem"><type>js</type><name>mage/adminhtml/tabs.js</name></action>
